<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fundo_app"
    tools:context=".Activity_CalcularUmidade">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView_TitExtra"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35sp"
            android:layout_marginTop="70sp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/TitExtras"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button_CalcularUmidade"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="2sp"
            android:layout_marginTop="70sp"
            android:text="@string/btnUmidade"
            app:icon="@drawable/humidity" />

        <Button
            android:id="@+id/button_EncontrarLoja"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="2sp"
            android:layout_marginTop="70sp"
            android:includeFontPadding="true"
            android:text="@string/btnGPS"
            app:icon="@drawable/encontrar_localizacao" />

        <Button
            android:id="@+id/buttonExtras_Voltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:text="@string/RetornodoCadastro" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>