<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_EncontraLoja">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Fundo_app"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="80sp"
            android:fontFamily="@font/galada"
            android:text="@string/TitGPS"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnEncontraLoja_INICIAR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/hint" />

        <Button
            android:id="@+id/buttonGPS_Voltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300sp"
            android:text="@string/RetornodoCadastro" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>