<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fundo_app"
    tools:context=".Activity_Lista_Pedido_e_Contato">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView_TitPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/TitPedido"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextMultiLine_PedidoCatalogo"
            android:layout_width="300sp"
            android:layout_height="70sp"
            android:layout_marginLeft="29sp"
            android:layout_marginTop="40sp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|top"
            android:hint="@string/TitPedidoEdit"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_EnviaPedido"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="40dp"
            android:text="@string/EnviarPedido" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65sp"
            android:layout_marginTop="70sp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/TitContato"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton_Telefone"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/Fundo_app"
            app:srcCompat="@drawable/telefoneicone" />

        <ImageButton
            android:id="@+id/imageButton_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="-130dp"
            android:backgroundTint="@color/Fundo_app"
            app:srcCompat="@drawable/emailicone" />

        <Button
            android:id="@+id/button_RetornarPedido"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/RetornodoCadastro" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>